samples/_failures_safe/1761224155_aad158_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_109b047a.c: In function ‘generate_report’:
./samples/SAFE/__tmp_109b047a.c:148:80: error: expected ‘)’ at end of input
  148 |             printf("%s %s %s\n", entry->timestamp, entry->level, entry->message
      |                   ~                                                            ^
      |                                                                                )
./samples/SAFE/__tmp_109b047a.c:148:13: error: expected declaration or statement at end of input
  148 |             printf("%s %s %s\n", entry->timestamp, entry->level, entry->message
      |             ^~~~~~
./samples/SAFE/__tmp_109b047a.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_109b047a.c:148:13: error: expected declaration or statement at end of input
